2010-10-13  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        Chromium port can't run JavaScriptCore tests
        https://bugs.webkit.org/show_bug.cgi?id=47654

        This lets webkit-patch build-and-test work on Chromium.

        * Scripts/webkitpy/common/config/ports.py:
        * Scripts/webkitpy/tool/steps/runtests.py:

2010-10-13  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Make --port a global option and pass the port information to the commit-queue subprocess
        https://bugs.webkit.org/show_bug.cgi?id=47650

        This patch paves the way to run the commit-queue on a non-Mac port.

        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:
        * Scripts/webkitpy/tool/commands/queuestest.py:
        * Scripts/webkitpy/tool/main.py:
        * Scripts/webkitpy/tool/steps/options.py:
        * Scripts/webkitpy/tool/steps/preparechangelog.py:
        * Scripts/webkitpy/tool/steps/runtests.py:
        * Scripts/webkitpy/tool/steps/update.py:

2010-10-13  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Introduce the ChromiumXVFBPort for running commit-queue on EC2
        https://bugs.webkit.org/show_bug.cgi?id=47653

        I'm not entirely sure this is the best way to do this, but we need to
        run the tests under XVFB on EC2 because the EC2 instances don't have a
        real monitor hooked up.  This patch adds a ChromiumXVFBPort that runs
        that way.  The idea is that XVFB is like a platform for the Chromium
        port, but we don't have a real notion of platform separate from port.

        * Scripts/webkitpy/common/config/ports.py:

2010-10-13  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Add HTTP caching support
        https://bugs.webkit.org/show_bug.cgi?id=44261

        Add include paths for the new soup HTTP cache code.
